@startuml POS Cesariel - Database Class Diagram

' Configuración de estilos
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

' ============================================
' DOMAIN: User Management (User, Branch)
' ============================================
package "User Domain" #LightBlue {
    class Branch {
        +id: Integer <<PK>>
        +name: String(100)
        +address: String(200)
        +phone: String(20)
        +email: String(100)
        +is_active: Boolean
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - users: List<User>
        - sales: List<Sale>
        - inventory_movements: List<InventoryMovement>
        - notifications: List<Notification>
        - branch_tax_rates: List<BranchTaxRate>
        - branch_payment_methods: List<BranchPaymentMethod>
    }

    class User {
        +id: Integer <<PK>>
        +email: String(100) <<Unique>>
        +username: String(50) <<Unique>>
        +full_name: String(100)
        +hashed_password: String(255)
        +role: UserRole
        +branch_id: Integer <<FK>>
        +is_active: Boolean
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - branch: Branch
        - sales: List<Sale>
        - notifications: List<Notification>
        - notification_settings: NotificationSetting
        - config_changes: List<ConfigChangeLog>
        - security_events: List<SecurityAuditLog>
    }

    enum UserRole {
        ADMIN
        MANAGER
        SELLER
        ECOMMERCE
    }
}

' ============================================
' DOMAIN: Product Catalog (Product, Category)
' ============================================
package "Product Domain" #LightGreen {
    class Category {
        +id: Integer <<PK>>
        +name: String(100)
        +description: Text
        +is_active: Boolean
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - products: List<Product>
    }

    class Product {
        +id: Integer <<PK>>
        +name: String(200)
        +description: Text
        +sku: String(50) <<Unique>>
        +barcode: String(50) <<Unique>>
        +category_id: Integer <<FK>>
        +brand: String(100)
        +price: Numeric(10,2)
        +cost: Numeric(10,2)
        +ecommerce_price: Numeric(10,2)
        +stock_quantity: Integer
        +min_stock: Integer
        +is_active: Boolean
        +show_in_ecommerce: Boolean
        +has_sizes: Boolean
        +image_url: String(255)
        +created_at: DateTime
        +updated_at: DateTime
        --
        Methods:
        +get_stock_for_branch(branch_id): Integer
        +get_available_stock_for_branch(branch_id): Integer
        +calculate_total_stock(): Integer
        +has_stock_in_branch(branch_id, quantity): Boolean
        +get_allowed_sizes(): List<String>
        +is_valid_size(size): Boolean
        --
        Relationships:
        - category: Category
        - sale_items: List<SaleItem>
        - inventory_movements: List<InventoryMovement>
        - branch_stocks: List<BranchStock>
        - product_sizes: List<ProductSize>
        - product_images: List<ProductImage>
    }

    class ProductImage {
        +id: Integer <<PK>>
        +product_id: Integer <<FK>>
        +image_url: String(500)
        +image_order: Integer
        +alt_text: String(255)
        +is_main: Boolean
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - product: Product
    }
}

' ============================================
' DOMAIN: Inventory Management
' ============================================
package "Inventory Domain" #LightYellow {
    class BranchStock {
        +id: Integer <<PK>>
        +branch_id: Integer <<FK>>
        +product_id: Integer <<FK>>
        +stock_quantity: Integer
        +min_stock: Integer
        +created_at: DateTime
        +updated_at: DateTime
        --
        Properties:
        +available_stock: Integer
        --
        Methods:
        +has_sufficient_stock(quantity): Boolean
        --
        Relationships:
        - branch: Branch
        - product: Product
    }

    class ProductSize {
        +id: Integer <<PK>>
        +product_id: Integer <<FK>>
        +branch_id: Integer <<FK>>
        +size: String(10)
        +stock_quantity: Integer
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - product: Product
        - branch: Branch
    }

    class InventoryMovement {
        +id: Integer <<PK>>
        +product_id: Integer <<FK>>
        +branch_id: Integer <<FK>>
        +movement_type: String(20)
        +quantity: Integer
        +previous_stock: Integer
        +new_stock: Integer
        +reference_id: Integer
        +reference_type: String(20)
        +notes: Text
        +created_at: DateTime
        --
        Relationships:
        - product: Product
        - branch: Branch
    }

    class ImportLog {
        +id: Integer <<PK>>
        +filename: String(255)
        +user_id: Integer <<FK>>
        +total_rows: Integer
        +successful_rows: Integer
        +failed_rows: Integer
        +status: String(20)
        +error_details: Text
        +created_at: DateTime
        +completed_at: DateTime
        --
        Relationships:
        - user: User
    }
}

' ============================================
' DOMAIN: Sales
' ============================================
package "Sales Domain" #LightCoral {
    class Sale {
        +id: Integer <<PK>>
        +sale_number: String(50) <<Unique>>
        +sale_type: SaleType
        +branch_id: Integer <<FK>>
        +user_id: Integer <<FK>>
        +customer_name: String(100)
        +customer_email: String(100)
        +customer_phone: String(20)
        +subtotal: Numeric(10,2)
        +tax_amount: Numeric(10,2)
        +discount_amount: Numeric(10,2)
        +total_amount: Numeric(10,2)
        +payment_method: String(50)
        +payment_method_id: Integer
        +payment_method_name: String(100)
        +order_status: OrderStatus
        +tax_rate_id: Integer
        +tax_rate_name: String(100)
        +tax_rate_percentage: Numeric(5,2)
        +notes: Text
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - branch: Branch
        - user: User
        - sale_items: List<SaleItem>
    }

    class SaleItem {
        +id: Integer <<PK>>
        +sale_id: Integer <<FK>>
        +product_id: Integer <<FK>>
        +quantity: Integer
        +unit_price: Numeric(10,2)
        +total_price: Numeric(10,2)
        +size: String(10)
        --
        Relationships:
        - sale: Sale
        - product: Product
    }

    enum SaleType {
        POS
        ECOMMERCE
    }

    enum OrderStatus {
        PENDING
        PROCESSING
        SHIPPED
        DELIVERED
        CANCELLED
    }
}

' ============================================
' DOMAIN: E-commerce
' ============================================
package "E-commerce Domain" #Lavender {
    class EcommerceConfig {
        +id: Integer <<PK>>
        +store_name: String(100)
        +store_description: Text
        +store_logo: String(255)
        +contact_email: String(100)
        +contact_phone: String(20)
        +address: String(200)
        +tax_percentage: Numeric(5,2)
        +currency: String(10)
        +is_active: Boolean
        +created_at: DateTime
        +updated_at: DateTime
    }

    class StoreBanner {
        +id: Integer <<PK>>
        +title: String(200)
        +subtitle: String(300)
        +image_url: String(500)
        +link_url: String(500)
        +button_text: String(100)
        +banner_order: Integer
        +is_active: Boolean
        +created_at: DateTime
        +updated_at: DateTime
    }
}

' ============================================
' DOMAIN: Payment & Configuration
' ============================================
package "Payment & Configuration Domain" #LightGray {
    class PaymentMethod {
        +id: Integer <<PK>>
        +name: String(100)
        +code: String(50) <<Unique>>
        +icon: String(10)
        +is_active: Boolean
        +requires_change: Boolean
        +description: String(255)
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - branch_configurations: List<BranchPaymentMethod>
    }

    class TaxRate {
        +id: Integer <<PK>>
        +name: String(100)
        +rate: Numeric(5,2)
        +is_active: Boolean
        +is_default: Boolean
        +description: String(255)
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - branch_configurations: List<BranchTaxRate>
    }

    class SystemConfig {
        +id: Integer <<PK>>
        +default_currency: CurrencyCode
        +currency_symbol: String(10)
        +currency_position: CurrencyPosition
        +decimal_places: Integer
        +default_tax_rate: Integer
        +session_timeout: Integer
        +created_at: DateTime
        +updated_at: DateTime
        --
        Methods:
        +to_dict(): Dict
    }

    enum CurrencyCode {
        ARS
        USD
    }

    enum CurrencyPosition {
        BEFORE
        AFTER
    }

    class PaymentConfig {
        +id: Integer <<PK>>
        +name: String(100)
        +max_installments: Integer
        +is_active: Boolean
        +created_at: DateTime
        +updated_at: DateTime
    }

    class CustomInstallment {
        +id: Integer <<PK>>
        +payment_config_id: Integer <<FK>>
        +installments: Integer
        +surcharge_percentage: Numeric(5,2)
    }
}

' ============================================
' DOMAIN: Branch-Specific Configuration
' ============================================
package "Branch Configuration Domain" #PeachPuff {
    class BranchTaxRate {
        +id: Integer <<PK>>
        +branch_id: Integer <<FK>>
        +tax_rate_id: Integer <<FK>>
        +is_default: Boolean
        +effective_from: DateTime
        +notes: String(500)
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - branch: Branch
        - tax_rate: TaxRate
    }

    class BranchPaymentMethod {
        +id: Integer <<PK>>
        +branch_id: Integer <<FK>>
        +payment_method_id: Integer <<FK>>
        +is_active: Boolean
        +surcharge_override: Numeric(5,2)
        +installment_override: Integer
        +notes: String(500)
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - branch: Branch
        - payment_method: PaymentMethod
    }
}

' ============================================
' DOMAIN: Notifications
' ============================================
package "Notification Domain" #LightCyan {
    class Notification {
        +id: Integer <<PK>>
        +type: NotificationType
        +priority: NotificationPriority
        +title: String(200)
        +message: Text
        +data: JSON
        +is_read: Boolean
        +is_active: Boolean
        +user_id: Integer <<FK>>
        +branch_id: Integer <<FK>>
        +created_at: DateTime
        +read_at: DateTime
        +expires_at: DateTime
        --
        Methods:
        +mark_as_read(): void
        +is_expired(): Boolean
        --
        Relationships:
        - user: User
        - branch: Branch
    }

    class NotificationSetting {
        +id: Integer <<PK>>
        +user_id: Integer <<FK>> <<Unique>>
        +low_stock_enabled: Boolean
        +low_stock_threshold: Integer
        +daily_sales_enabled: Boolean
        +daily_sales_time: String(5)
        +backup_reminder_enabled: Boolean
        +backup_reminder_frequency: String(20)
        +backup_reminder_day: Integer
        +enabled: Boolean
        +email_notifications: Boolean
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - user: User
    }

    enum NotificationType {
        LOW_STOCK
        DAILY_SALES_REPORT
        BACKUP_REMINDER
        SYSTEM_ALERT
        CUSTOM
    }

    enum NotificationPriority {
        LOW
        MEDIUM
        HIGH
        URGENT
    }
}

' ============================================
' DOMAIN: WhatsApp & Social Media
' ============================================
package "WhatsApp & Social Media Domain" #MistyRose {
    class WhatsAppConfig {
        +id: Integer <<PK>>
        +business_phone: String(20)
        +business_name: String(100)
        +welcome_message: Text
        +business_hours: String(200)
        +auto_response_enabled: Boolean
        +is_active: Boolean
        +created_at: DateTime
        +updated_at: DateTime
    }

    class WhatsAppSale {
        +id: Integer <<PK>>
        +sale_id: Integer <<FK>>
        +customer_whatsapp: String(20)
        +customer_name: String(100)
        +customer_address: Text
        +shipping_method: String(50)
        +shipping_cost: Numeric(10,2)
        +notes: Text
        +whatsapp_chat_url: String(500)
        +created_at: DateTime
        +updated_at: DateTime
        --
        Relationships:
        - sale: Sale
    }

    class SocialMediaConfig {
        +id: Integer <<PK>>
        +platform: String(50)
        +username: String(100)
        +url: String(500)
        +is_active: Boolean
        +display_order: Integer
        +created_at: DateTime
        +updated_at: DateTime
    }
}

' ============================================
' DOMAIN: Audit & Logging
' ============================================
package "Audit & Logging Domain" #Thistle {
    class ConfigChangeLog {
        +id: Integer <<PK>>
        +table_name: String(100)
        +record_id: Integer
        +action: ChangeAction
        +field_name: String(100)
        +old_value: Text
        +new_value: Text
        +changed_by_user_id: Integer <<FK>>
        +changed_at: DateTime
        +ip_address: String(50)
        +user_agent: String(500)
        +notes: Text
        --
        Properties:
        +summary: String
        --
        Relationships:
        - changed_by: User
    }

    class SecurityAuditLog {
        +id: Integer <<PK>>
        +event_type: String(50)
        +user_id: Integer <<FK>>
        +username: String(100)
        +success: String(10)
        +ip_address: String(50)
        +user_agent: String(500)
        +details: Text
        +created_at: DateTime
        --
        Relationships:
        - user: User
    }

    enum ChangeAction {
        CREATE
        UPDATE
        DELETE
        ACTIVATE
        DEACTIVATE
    }
}

' ============================================
' RELATIONSHIPS
' ============================================

' User Domain Relationships
Branch "1" -- "0..*" User : has
User ..> UserRole : uses

' Product Domain Relationships
Category "1" -- "0..*" Product : contains
Product "1" -- "0..*" ProductImage : has

' Inventory Domain Relationships
Branch "1" -- "0..*" BranchStock : has
Product "1" -- "0..*" BranchStock : stored_in
Branch "1" -- "0..*" ProductSize : stocks
Product "1" -- "0..*" ProductSize : has_sizes
Branch "1" -- "0..*" InventoryMovement : tracks
Product "1" -- "0..*" InventoryMovement : affects
User "1" -- "0..*" ImportLog : performs

' Sales Domain Relationships
Branch "1" -- "0..*" Sale : processes
User "1" -- "0..*" Sale : creates
Sale "1" -- "1..*" SaleItem : contains
Product "1" -- "0..*" SaleItem : sold_in
Sale ..> SaleType : uses
Sale ..> OrderStatus : has

' Payment & Configuration Relationships
SystemConfig ..> CurrencyCode : uses
SystemConfig ..> CurrencyPosition : uses
PaymentConfig "1" -- "0..*" CustomInstallment : defines

' Branch Configuration Relationships
Branch "1" -- "0..*" BranchTaxRate : configures
TaxRate "1" -- "0..*" BranchTaxRate : applied_to
Branch "1" -- "0..*" BranchPaymentMethod : accepts
PaymentMethod "1" -- "0..*" BranchPaymentMethod : available_at

' Notification Domain Relationships
User "1" -- "0..*" Notification : receives
Branch "1" -- "0..*" Notification : targets
User "1" -- "0..1" NotificationSetting : has
Notification ..> NotificationType : uses
Notification ..> NotificationPriority : has

' WhatsApp Domain Relationships
Sale "1" -- "0..1" WhatsAppSale : tracked_in

' Audit Domain Relationships
User "1" -- "0..*" ConfigChangeLog : makes
User "1" -- "0..*" SecurityAuditLog : triggers
ConfigChangeLog ..> ChangeAction : performs

' Legend
legend right
|= Symbol |= Meaning |
| -- | Association |
| ..> | Dependency/Uses |
| <<PK>> | Primary Key |
| <<FK>> | Foreign Key |
| <<Unique>> | Unique Constraint |
endlegend

@enduml
